--- a/resources/sass/codebase/_variables.scss
+++ b/resources/sass/codebase/_variables.scss
@@ -21,14 +21,14 @@ $gray:                      $gray-400 !default;
 $gray-dark:                 $gray-600 !default;
 $gray-darker:               $gray-800 !default;
 
-$brand-primary:             #3f9ce8 !default;
+$brand-primary:             #12A14A !default;
 $brand-light:               lighten($brand-primary, 15%) !default;
 $brand-lighter:             lighten($brand-primary, 30%) !default;
 $brand-dark:                $gray-800 !default;
 $brand-darker:              $gray-900 !default;
 
 $brand-success:             #9ccc65 !default;
-$brand-success-light:       #ebf5df !default;
+$brand-success-light:       #232e17 !default;
 $brand-info:                #26c6da !default;
 $brand-info-light:          #e3f4fc !default;
 $brand-warning:             #ffca28 !default;
@@ -111,7 +111,7 @@ $btn-hero-padding-y-lg:     15px !default;
 // Header
 $header-height:             68px !default;           // Best values > 50px and < 80px
 $header-bg:                 $white !default;
-$header-inverse-bg:         $brand-dark !default;
+$header-inverse-bg:         $brand-primary !default;
 
 
 // Sidebar and Side Overlay
