--- a/resources/sass/codebase/utilities/_sizing.scss
+++ b/resources/sass/codebase/utilities/_sizing.scss
@@ -54,3 +54,39 @@
     width: 50px !important;
     height: 50px !important;
 }
+
+
+.width-20 { width: 20px !important; }
+.width-30 { width: 30px !important; }
+.width-50 { width: 50px !important; }
+.width-75 { width: 75px !important; }
+.width-100 { width: 100px !important; }
+.width-125 { width: 125px !important; }
+.width-150 { width: 150px !important; }
+.width-175 { width: 175px !important; }
+.width-200 { width: 200px !important; }
+.width-300 { width: 300px !important; }
+.width-320 { width: 320px !important; }
+
+
+.height-20 { height: 20px !important; }
+.height-30 { height: 30px !important; }
+.height-50 { height: 50px !important; }
+.height-75 { height: 75px !important; }
+.height-100 { height: 100px !important; }
+.height-125 { height: 125px !important; }
+.height-150 { height: 150px !important; }
+.height-175 { height: 175px !important; }
+.height-200 { height: 200px !important; }
+.height-300 { height: 300px !important; }
+.height-400 { height: 400px !important; }
+
+@include media-breakpoint-between(md, xl)
+{
+    .intro-h { height: 450px !important; }
+}
+@include media-breakpoint-between(xs, sm)
+{
+    .intro-h { height: 200px !important; }
+}
+.height-500 { height: 500px !important; }
