--- a/resources/sass/bootstrap/_buttons.scss
+++ b/resources/sass/bootstrap/_buttons.scss
@@ -35,6 +35,7 @@
   &:disabled {
     opacity: $btn-disabled-opacity;
     @include box-shadow(none);
+    cursor: not-allowed;
   }
 
   &:not(:disabled):not(.disabled):active,
