--- a/resources/sass/codebase/_block.scss
+++ b/resources/sass/codebase/_block.scss
@@ -125,6 +125,28 @@
         }
     }
 
+    &.block-rounded-2 {
+        border-radius: 10px;
+
+        > .block-header {
+            @include border-top-radius(6px);
+
+            &:last-child {
+                @include border-bottom-radius(6px);
+            }
+        }
+
+        > .block-content {
+            &:first-child {
+                @include border-top-radius(6px);
+            }
+
+            &:last-child {
+                @include border-bottom-radius(6px);
+            }
+        }
+    }
+
     &.block-themed > .block-header {
         border-bottom: none;
         color: $white;
@@ -146,6 +168,10 @@
 
     &.block-shadow {
         box-shadow: 0 15px 30px rgba($gray-900, .05);
+    }
+
+    &.block-shadow-2 {
+        box-shadow: 0px 0px 6px 0px rgb(60 60 60 / 24%);
     }
 }
 
