--- a/resources/sass/custom/_main.scss
+++ b/resources/sass/custom/_main.scss
@@ -47,3 +47,83 @@
         }
     }
 }
+
+.title {
+    margin-bottom: 4px;
+    font-size: 1rem;
+    color: rgba(49, 53, 59, 0.96);
+    max-width: 100%;
+    max-height: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: pre-wrap;
+    line-height: 1.5;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+/* Kategori Modal Style */
+.c-pointer {
+    cursor: pointer;
+}
+
+.modal-category-list ul {
+    list-style: none;
+    padding: 0;
+    padding-top: 15px;
+    margin: 0;
+}
+
+.modal-category-list ul li {
+    font-size: 13px;
+    padding: 6px 16px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+}
+.modal-category-list ul li.selected:before,
+.modal-category-list ul li:hover:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0px;
+    width: 100%;
+    background: #eaeaea;
+    height: 100%;
+    z-index: -1;
+}
+
+.modal-category-list.has-right-arrow ul li:after {
+    content: "\f105";
+    font-family: "fontawesome";
+    position: absolute;
+    right: 0;
+    margin-right:15px;
+    top: calc(50% - 10px);
+    font-size: 14px;
+    opacity: 0.8;
+}
+
+
+.has-search i {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+}
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+
+
+.spacer {
+    height: 5px;
+    background: 0 0;
+}
